--- a/src/components/CompanyPage/CompanyPage.scss
+++ b/src/components/CompanyPage/CompanyPage.scss
@@ -57,7 +57,7 @@
   }
 }
 
-span {
+.cargo_bays {
   font-weight: bold;
   margin-left: 4px;
 }
@@ -95,10 +95,6 @@ span {
     
       &__container {
         height: 26px;
-    
-        &__input {
-
-        }
       }
     }
   }
